# homeassistant-agent

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
examples/: gen_schema.rs  raw.rs  raw_event.rs
schema/: connector.json
src/: lib.rs  utils.rs
src/connector/: client.rs  error.rs  mod.rs  options.rs
src/model/: component.rs  device_class.rs  discovery.rs  id.rs  mod.rs
