[package]
name = "homeassistant-agent"
version = "0.2.0-alpha.3"
edition = "2021"
rust-version = "1.76.0"

description = "A crate for implementing MQTT-based Home Assistant integrations"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/homeassistant-agent"
categories = ["network-programming"]
keywords = ["homeassistant", "smarthome", "iot", "mqtt"]
readme = "README.md"

[dependencies]
bytes = "1"
futures-util = "0.3"
log = "0.4"
rumqttc = { version = "0.24", default-features = false, features = ["use-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
humantime = "2"
humantime-serde = "1"
rand = "0.8.5"
strum = { version = "0.26", features = ["derive"] }

schemars = { version = "0.8", optional = true }
clap = { version = "4.5", optional = true, features = ["derive", "env"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11.2"
tokio = { version = "1", features = ["full"] }

schemars = { version = "0.8" }
clap = { version = "4.5", features = ["derive", "env"] }

[[example]]
name = "raw"
required-features = ["clap"]

[[example]]
name = "gen_schema"
required-features = ["schemars"]
